objects/Test_October__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Pick_value1__c</fullName>
        <label>Test Pick value1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ValuE 1</fullName>
                    <label>Value 1</label>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test October</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test October Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test October</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>